--- a/src/index.css
+++ b/src/index.css
@@ -1799,6 +1799,7 @@ a.tabSelected {
   .bondsOps {
     flex-direction: row-reverse;
     justify-content: flex-end;
+    column-gap: 8px;
   }
 
   .searchBar {
